@@ -54,6 +54,7 @@ addCommandAlias(
   "dirty-rebuild",
   Seq(
     "scalalib/publishLocal",
+    "testRunner/publishLocal",
     "sbtScalaNative/publishLocal",
     "testInterface/publishLocal"
   ).mkString(";", ";", "")
@@ -297,7 +298,7 @@ lazy val sbtPluginSettings =
       sbtPlugin := true,
       scriptedLaunchOpts ++=
         Seq("-Xmx1024M",
-            "-XX:MaxPermSize=256M",
+            "-XX:MaxMetaspaceSize=256M",
             "-Dplugin.version=" + version.value) ++
           ivyPaths.value.ivyHome.map(home => s"-Dsbt.ivy.home=${home}").toSeq
     )
@@ -322,9 +323,11 @@ lazy val sbtScalaNative =
         .dependsOn(publishLocal in ThisProject)
         .dependsOn(publishLocal in scalalib)
         .evaluated,
-      publishLocal := publishLocal.dependsOn(publishLocal in tools).value
+      publishLocal := publishLocal
+        .dependsOn(publishLocal in tools, publishLocal in testRunner)
+        .value
     )
-    .dependsOn(tools)
+    .dependsOn(tools, testRunner)
 
 lazy val nativelib =
   project
@@ -579,3 +582,15 @@ lazy val testInterfaceSbtDefs =
       libraryDependencies -= "org.scala-native" %%% "test-interface" % version.value % Test
     )
     .enablePlugins(ScalaNativePlugin)
+
+lazy val testRunner =
+  project
+    .settings(toolSettings)
+    .settings(mavenPublishSettings)
+    .in(file("test-runner"))
+    .settings(
+      crossScalaVersions := Seq(sbt13ScalaVersion, sbt10ScalaVersion),
+      libraryDependencies += "org.scala-sbt" % "test-interface" % "1.0",
+      sources in Compile ++= (sources in testInterfaceSerialization in Compile).value
+    )
+    .dependsOn(tools)
